Fix SVG icon alignment.

--- a/themes/root/css/icon-helper.css
+++ b/themes/root/css/icon-helper.css
@@ -25,7 +25,7 @@
     width: 1.1em;
     height: 1.1em;
     fill: currentColor;
-    vertical-align: text-bottom;
+    vertical-align: sub;
 }
 
 .show--closed,
